feature development notes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -200,6 +200,9 @@
             'use strict';
 
             /*  todo:
+             * 
+             special characters
+             start play in the middle, loop one row, 2
              _____song mapping now moved to title based, not used on start
              linux chrome won't always get a audiocontext
              firefox, mac & linux, messes the page on play
